Fix action link in IE8
- we had PNG fallbacks, but they weren't working
- because IE8 still recognised the syntax of the SVG line, it was successfully downloading the SVG instead of the PNG, but then unable to render it (no SVG support)
- this change ensures that IE8 can't recognise the syntax for the SVG line by adding an invisible linear gradient, forcing it to use the PNG line that it does recognise
- also reduces the size of the PNGs to match the size they should render at, because IE8 also doesn't support background-size

--- a/app/assets/stylesheets/govuk_publishing_components/components/_action-link.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_action-link.scss
@@ -7,8 +7,8 @@
     width: 50px;
     height: 45px;
     // sass-lint:disable no-duplicate-properties
-    background-image: image-url("govuk_publishing_components/action-link-arrow.png");
-    background-image: image-url("govuk_publishing_components/action-link-arrow.svg");
+    background: image-url("govuk_publishing_components/action-link-arrow.png");
+    background: image-url("govuk_publishing_components/action-link-arrow.svg"), linear-gradient(transparent, transparent);
     // sass-lint:enable no-duplicate-properties
     background-repeat: no-repeat;
     background-position: 0 50%;
@@ -104,9 +104,10 @@
     width: 30px;
     height: 30px;
     // sass-lint:disable no-duplicate-properties
-    background-image: image-url("govuk_publishing_components/action-link-arrow--simple.png");
-    background-image: image-url("govuk_publishing_components/action-link-arrow--simple.svg");
+    background: image-url("govuk_publishing_components/action-link-arrow--simple.png");
+    background: image-url("govuk_publishing_components/action-link-arrow--simple.svg"), linear-gradient(transparent, transparent);
     // sass-lint:enable no-duplicate-properties
+    background-repeat: no-repeat;
     background-size: 25px auto;
     background-position: 0 2px;
   }
@@ -127,9 +128,10 @@
     width: 30px;
     height: 30px;
     // sass-lint:disable no-duplicate-properties
-    background-image: image-url("govuk_publishing_components/action-link-arrow--dark.png");
-    background-image: image-url("govuk_publishing_components/action-link-arrow--dark.svg");
+    background: image-url("govuk_publishing_components/action-link-arrow--dark.png");
+    background: image-url("govuk_publishing_components/action-link-arrow--dark.svg"), linear-gradient(transparent, transparent);
     // sass-lint:enable no-duplicate-properties
+    background-repeat: no-repeat;
     background-size: 25px auto;
     background-position: 0 2px;
   }
@@ -144,10 +146,12 @@
     width: 80px;
     height: 70px;
     // sass-lint:disable no-duplicate-properties
-    background-image: image-url("govuk_publishing_components/action-link--nhs.png");
-    background-image: image-url("govuk_publishing_components/action-link--nhs.svg");
+    background: image-url("govuk_publishing_components/action-link--nhs.png");
+    background: image-url("govuk_publishing_components/action-link--nhs.svg"), linear-gradient(transparent, transparent);
     // sass-lint:enable no-duplicate-properties
+    background-repeat: no-repeat;
     background-size: 85% auto;
+    background-position: 0 50%;
   }
 }
 
